# claude-code-character

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.specify/memory/: constitution.md
examples/: voice-config.example.json
specs/001-claude-voice-hooks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-claude-voice-hooks/checklists/: requirements.md
specs/001-claude-voice-hooks/contracts/: stop-hook-contract.md
specs/001-voice-character-interaction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-character-interaction/checklists/: requirements.md
src/: __main__.py  cli.py
src/audio/: capture.py  device_manager.py  playback.py
src/character/: profile.py  transformer.py
src/character/profiles/: toadwart.json  toudie.json
src/config/: persistence.py  voice_config.py
src/hooks/: input_hook.py  output_hook.py  voice_output_hook.py
src/voice/: interaction_manager.py  output_manager.py  speech_to_text.py  text_to_speech.py  voice_session.py
